Fixed tick/cross icon size on Firefox
Firefox consistently renders Unicode character &#9746 (ballot box with cross)
larger than &#9745 (ballot box with tick):

- https://www.unicodepedia.com/unicode/miscellaneous-symbols/2611/ballot-box-with-check
- https://www.unicodepedia.com/unicode/miscellaneous-symbols/2612/ballot-box-with-x

--- a/html/sass/modules/_tabular.scss
+++ b/html/sass/modules/_tabular.scss
@@ -18,7 +18,7 @@
 
 .tabular td {
   position: relative;
-  padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+  padding: 0.1rem 0.5rem 0.1rem 0.5rem;
   text-align: left;
   font-size: 0.9em;
   font-weight: normal;
@@ -135,12 +135,35 @@
   cursor: pointer;
 }
 
+.tabular td span.control img {
+  margin-left: 2px;
+  margin-right: 2px;
+  margin-top: 8px;
+  margin-bottom: 0px;
+  border: solid 1px #268bd2;
+  border-radius: 2px;
+  pointer-events: none;
+}
+
 .tabular td span.commit {
   color: $content-table-commit;  
 }
 
+.tabular td span.commit img {
+  width: 12px;
+  padding: 2px;
+  filter: invert(58%) sepia(89%) saturate(3723%) hue-rotate(41deg) brightness(98%) contrast(101%);
+}
+
 .tabular td span.rollback {
   color: $content-table-rollback;  
+}
+
+.tabular td span.rollback img {
+  width: 14px;
+  height: 14px;
+  padding: 1px;
+  filter: invert(30%) sepia(41%) saturate(3835%) hue-rotate(344deg) brightness(89%) contrast(92%);
 }
 
 .tabular tbody tr.modified td span.commit {
